Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-4790

Access violation exception when setting cache-xml-file on cache factory

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • native client
    • None

    Description

      When using the latest geode-native, the following code results in an access violation exception.  This appears to be a regression as the same code worked in 9.2 and prior.

      var cache = new CacheFactory()
      .Set("cache-xml-file", somePath)
      .Create();
      
      var region = cache.GetRegion<string, SessionStateStoreData>(someRegionName);
      

       

      Attachments

        Activity

          People

            rmcmahon Ryan McMahon
            rmcmahon Ryan McMahon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: